--- a/project/blog/templates/blog/about_1.html
+++ b/project/blog/templates/blog/about_1.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Scape Blog</title>
+    <title>Scape About</title>
   </head>
   <body>
-    <p>Now this is some sweet HTML!</p>
+    <p>About Scape..</p>
   </body>
 </html>
